2011-09-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_initialize): set mouse visible

------------------------------------------------------------------------

2011-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.21.1 released

2011-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* lua/terminal.lua: little computer as avatar

2011-08-24  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (get_character): fix: buffersize + 1 for terminator

2011-08-21  Andreas K. Foerster  <info@akfoerster.de>

	* configure: rename macros
	avatar.c, avatarsay.c: adapted

	* avatar.c: don't hide mouse, unless requested
	lua/akfavatar/avtdemo.lua (avtdemo): hide/show mouse
	lua-akfavatar-prg.c (reset): make mouse visible

	* avatar.c (avt_say_len):
	fix: when checking for \b, make sure it's not past the end

------------------------------------------------------------------------

2011-08-20  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.21.0 released

2011-08-18  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (script_error): new function

2011-08-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_tell_mb_len): check if len<=0

	* lua/lua-avt.c (lavt_load_audio_file, lavt_load_audio_string):
	force full garbage collection

	* lua/akfavatar-vorbis.c (collect_garbage): new function
	(lvorbis_load_file, lvorbis_load_string)
	(lvorbis_load_file_chain, lvorbis_load_string_chain):
	force full garbage collection

	* lua/audioplayer.lua, lua/akfavatar/avtdemo.lua:
	don't call the garbage collector

2011-08-15  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_recode_buffer): new function
	(avt_set_title): adapted

	* lua/akfavatar/lang.lua: new module
	lua/multiplication.lua: adapted

2011-08-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize, calculate_balloonmaxheight):
	further code cleanups

2011-08-13  Andreas K. Foerster  <info@akfoerster.de>
