@@ -1,3 +1,8 @@
+* AKFAvatar-testing
+
+  - the filechooser uses the systems character encoding
+  - minor bugfixes
+
 * AKFAvatar 0.21.1
 
   This is mainly a bugfix release, only few changes
