@@ -1,3 +1,8 @@
+2011-09-04  Andreas K. Foerster  <info@akfoerster.de>
+
+	* filechooser.c (system_encoding): new macro
+	(avta_file_selection): adapted
+
 2011-09-01  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-avt.c (lavt_initialize): set mouse visible
